# esp_telnet

./: AUTHORS  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: idf_components_upload.yml
include/telnet/: server.h
src/: server.c
test/: CMakeLists.txt  common.h  test_server.c
